fix hw01 scrollbar

--- a/hw01/01_cssgrid/layout.css
+++ b/hw01/01_cssgrid/layout.css
@@ -40,8 +40,8 @@ aside {
 main {
     grid-area: primary;
     /* background-color: pink; */
-    overflow-y: scroll;
-    z-index: 1000;
+    /* overflow-y: scroll;
+    z-index: 1000; */
 }
 
 footer {
@@ -57,9 +57,15 @@ header {
 }
 
 nav {
-    margin-top: 70px;
+    /* margin-top: 70px; */
     height: 100px;
     /* background-color: lightpink; */
+}
+
+.content {
+    margin-top: 70px;
+    height: calc(100vh - 170px);
+    overflow-y: auto;
 }
 
 #featured-content {
@@ -84,3 +90,4 @@ nav {
         background-color: teal;
     }
 }
+
